--- a/index.html
+++ b/index.html
@@ -7,19 +7,15 @@
         body {
             margin: 0;
             padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
+            overflow: hidden;
             background-color: #000;
         }
         #game {
-            width: 800px;
-            height: 600px;
+            width: 100vw;
+            height: 100vh;
         }
         canvas {
             display: block;
-            margin: 0 auto;
         }
     </style>
 </head>
